@@ -17,7 +17,7 @@
 	"no_one": "No one",
 	"no_reason": "No reason given.",
 	"moved_by": "Moved by {{user}}",
-	"developed_by": "Developed by {{user}}",
+	"developed_by": "{{bot_name}} v{{version}} developed by {{user}}",
 	"help_title": "{{bot_name}} Help",
 	"help_module_message": "Use `.taco help {{command}}` for help on this command set.",
 	"help_command_title": "{{bot_name}} `{{command}}` Help",
@@ -40,7 +40,7 @@
 	"restricted": "Restricted",
 	"restricted_default_deny_message": "That message is not allowed in this channel.",
 	"restricted_deny_message": "{{user}}, {{reason}}",
-	"taco_reason_invite": "inviting {{user} to the server",
+	"taco_reason_invite": "inviting {{user}} to the server",
 	"taco_reason_join": "joining the server",
 	"taco_reason_react": "reacting to {{user}}'s message with a 🌮",
 	"taco_reason_boost": "boosting the server",
